<resources>
    <String name="address">Address</String>
    <string name="app_name">Rest</string>
    <string name="get_new_quatation">Get new Quatation</string>
    <string name="oK">ok</string>
    <string name="main_course">Main Course</string>
    <string name="desert">Desert</string>
    <string name="beverages">Beverages</string>
    <string name="take_away">Take away</string>
    <string name="quantity">Quantity</string>
    <string name="ok">OK</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="tel">Telephone</string>
    <string name="nic">NIC</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>
